--- a/0x03-ES6_data_manipulation/package.json
+++ b/0x03-ES6_data_manipulation/package.json
@@ -17,5 +17,8 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.17.0",
     "jest": "^24.9.0"
+  },
+  "dependencies": {
+    "sudo": "^1.0.3"
   }
 }
